FIX: overflowed element it is interupted other function in index file page

--- a/public/resources/apps/files/css/styles.css
+++ b/public/resources/apps/files/css/styles.css
@@ -25,6 +25,10 @@
     border: 1px solid var(--primary-color);
 }
 
+.file-list-container:has(.file-list .no-file-available) {
+    overflow-y: hidden;
+}
+
 .folder-list {
     position: relative;
     max-height: calc(100vh - 2rem);
